<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <ToggleButton
            android:id="@+id/MainToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textOn="@string/MainToggleOn"
            android:textOff="@string/MainToggleOff"
            android:textSize="36sp"
            android:textColor="#000000"
            android:shadowColor="#111111"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:gravity="center"
            android:background="#F3ED7C"
            android:onClick="MainToggleClick"
            />
        <EditText
            android:id="@+id/TextUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text=""
            android:textSize="22sp"
            android:hint="@string/TextUsernameHint"
            />
        <EditText
            android:id="@+id/TextPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            android:text=""
            android:textSize="22sp"
            android:hint="@string/TextPasswordHint"
            />
        <CheckBox android:id="@+id/CheckShowPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/CheckShowPassword"
            android:textSize="21sp"
            android:onClick="ShowPasswordClick"
            />
        <CheckBox android:id="@+id/CheckShowNotify"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/CheckShowNotify"
            android:textSize="21sp"
            android:onClick="ShowNotifyClick"
            />
        <Button
            android:id="@+id/BtnSaveConfig"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="22sp"
            android:text="@string/BtnSaveConfig"
            android:onClick="SaveConfigClick"
            />
        <TextView
            android:id="@+id/TextHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:text="@string/TextHelp"
            />
    </LinearLayout>
</ScrollView>

